navbar aligned correctly, pdf added

--- a/style.css
+++ b/style.css
@@ -2,18 +2,21 @@ body {
     padding: 0 350px;
     background-color: rgb(24, 20, 20); 
     color: white;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'poppins';
      
 }
 
 a{
     color: white;
     font-size: 32px;
-    padding: 16px;
-    margin: 16px;
+    padding-right: 100px;
     text-decoration: none; 
     display: inline-block;
     margin-top: 16px;
+}
+
+p{
+    font-weight: 100;
 }
 
 a:hover{
@@ -66,7 +69,7 @@ h2{
 }
 i a{
     font-size: 20px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'poppins';
     padding: 0px;
     margin: 0px; 
 }
